rf/removes account_info out of accounts [partial]
