# bff/doc/swagger/df.swagger.json
@@ -68,7 +68,41 @@
     },
     "/v1/accounts/create_account": {
       "post": {
-        "summary": "Create Account",
+        "summary": "Create AccountInfo",
+        "operationId": "df_CreateAccountInfo",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbCreateAccountInfoResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "description": "Create an AccountInfo",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/pbCreateAccountInfoRequest"
+            }
+          }
+        ],
+        "tags": [
+          "df"
+        ]
+      }
+    },
+    "/v1/accounts/create_account_info": {
+      "post": {
+        "summary": "Create AccountInfo",
         "operationId": "df_CreateAccount",
         "responses": {
           "200": {
@@ -97,6 +131,48 @@
         ],
         "tags": [
           "df"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
+      }
+    },
+    "/v1/accounts/get_account/{accountId}": {
+      "get": {
+        "summary": "Get AccountInfo by account_id",
+        "operationId": "df_GetAccountInfo",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbGetAccountInfoResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "accountId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "df"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
         ]
       }
     },
@@ -125,6 +201,50 @@
             "required": true,
             "type": "string",
             "format": "uint64"
+          }
+        ],
+        "tags": [
+          "df"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
+      }
+    },
+    "/v1/accounts/list_account_info": {
+      "get": {
+        "summary": "List AccountInfos [admin only]",
+        "operationId": "df_ListAccountInfo",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbListAccountInfoResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "pageId",
+            "in": "query",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -183,13 +303,13 @@
     },
     "/v1/accounts/update_account": {
       "patch": {
-        "summary": "Update Account",
-        "operationId": "df_UpdateAccount",
+        "summary": "Update AccountInfo",
+        "operationId": "df_UpdateAccountInfo",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/pbUpdateAccountResponse"
+              "$ref": "#/definitions/pbUpdateAccountInfoResponse"
             }
           },
           "default": {
@@ -202,11 +322,11 @@
         "parameters": [
           {
             "name": "body",
-            "description": "Update an Account",
+            "description": "Update an AccountInfo",
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/pbUpdateAccountRequest"
+              "$ref": "#/definitions/pbUpdateAccountInfoRequest"
             }
           }
         ],
@@ -241,7 +361,7 @@
         "parameters": [
           {
             "name": "body",
-            "description": "Update the Privacy Consent of an Account",
+            "description": "Update the Privacy Consent of an AccountInfo",
             "in": "body",
             "required": true,
             "schema": {
@@ -921,6 +1041,54 @@
         "email": {
           "type": "string"
         },
+        "secretKey": {
+          "type": "string"
+        },
+        "emailVerifiedTime": {
+          "type": "string",
+          "format": "date-time",
+          "example": "2023-10-05T00:00:00Z"
+        },
+        "emailVerified": {
+          "type": "boolean"
+        },
+        "privacyAcceptedDate": {
+          "type": "string",
+          "format": "date-time",
+          "example": "2023-10-05T00:00:00Z"
+        },
+        "permissionLevel": {
+          "type": "integer",
+          "format": "int32",
+          "description": "Default is 0 (non-priviledged)"
+        }
+      },
+      "title": "Account"
+    },
+    "pbAccountInfo": {
+      "type": "object",
+      "example": {
+        "account_id": "1",
+        "firstname": "John",
+        "lastname": "Doe",
+        "phone": "",
+        "street": "Death Star 2",
+        "zip": "0815",
+        "city": "New York",
+        "country": "USA",
+        "birthday": "1990-10-05T00:00:00Z",
+        "privacy_accepted": false,
+        "privacy_accepted_date": "0001-01-01T00:00:00Z",
+        "creator": "john.doe@example.com",
+        "created": "2023-10-05T02:30:53Z",
+        "changer": "john.doe@example.com",
+        "changed": "2023-10-05T02:30:53Z"
+      },
+      "properties": {
+        "accountId": {
+          "type": "string",
+          "format": "uint64"
+        },
         "firstname": {
           "type": "string"
         },
@@ -977,7 +1145,7 @@
           "example": "2023-10-05T00:00:00Z"
         }
       },
-      "title": "Account"
+      "title": "AccountInfo"
     },
     "pbBlockSessionRequest": {
       "type": "object",
@@ -1016,11 +1184,10 @@
       },
       "title": "Blocked Session"
     },
-    "pbCreateAccountRequest": {
+    "pbCreateAccountInfoRequest": {
       "type": "object",
       "example": {
-        "email": "john.doe@example.com",
-        "password": "MayTheForceBeWithYou!",
+        "account_id": "1",
         "firstname": "John",
         "lastname": "Doe",
         "street": "Main Street 1",
@@ -1030,12 +1197,6 @@
         "birthday": "1990-10-05T00:00:00Z"
       },
       "properties": {
-        "email": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        },
         "firstname": {
           "type": "string"
         },
@@ -1067,11 +1228,10 @@
           "example": true
         }
       },
-      "description": "Create an Account",
-      "title": "Create Account",
+      "description": "Create an AccountInfo",
+      "title": "Create AccountInfo",
       "required": [
-        "email",
-        "password",
+        "account_id",
         "firstname",
         "lastname",
         "street",
@@ -1079,6 +1239,37 @@
         "zip",
         "country",
         "birthday"
+      ]
+    },
+    "pbCreateAccountInfoResponse": {
+      "type": "object",
+      "properties": {
+        "accountInfo": {
+          "$ref": "#/definitions/pbAccountInfo"
+        }
+      },
+      "description": "Returns the created AccountInfo",
+      "title": "Created AccountInfo"
+    },
+    "pbCreateAccountRequest": {
+      "type": "object",
+      "example": {
+        "email": "john.doe@example.com",
+        "password": "MayTheForceBeWithYou!"
+      },
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      },
+      "description": "Create an Account",
+      "title": "Create Account",
+      "required": [
+        "email",
+        "password"
       ]
     },
     "pbCreateAccountResponse": {
@@ -1321,6 +1512,16 @@
       },
       "title": "Document"
     },
+    "pbGetAccountInfoResponse": {
+      "type": "object",
+      "properties": {
+        "accountInfo": {
+          "$ref": "#/definitions/pbAccountInfo"
+        }
+      },
+      "description": "Returns the AccountInfo",
+      "title": "GetAccountInfo Response"
+    },
     "pbGetAccountResponse": {
       "type": "object",
       "properties": {
@@ -1328,7 +1529,7 @@
           "$ref": "#/definitions/pbAccount"
         }
       },
-      "description": "Returns the Account",
+      "description": "Returns the AccountInfo",
       "title": "GetAccount Response"
     },
     "pbGetPaymentResponse": {
@@ -1350,6 +1551,20 @@
       },
       "description": "Returns the Person",
       "title": "GetPerson Response"
+    },
+    "pbListAccountInfoResponse": {
+      "type": "object",
+      "properties": {
+        "accountInfo": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/pbAccountInfo"
+          }
+        }
+      },
+      "description": "Returns the AccountInfo",
+      "title": "ListAccountInfo Response"
     },
     "pbListAccountsResponse": {
       "type": "object",
@@ -1751,56 +1966,16 @@
       },
       "title": "Session"
     },
-    "pbUpdateAccountPrivacyRequest": {
+    "pbUpdateAccountInfoRequest": {
       "type": "object",
       "example": {
-        "id": "1",
-        "privacy_accepted": true
-      },
-      "properties": {
-        "id": {
-          "type": "string",
-          "format": "int64",
-          "example": 1
-        },
-        "privacyAccepted": {
-          "type": "boolean",
-          "example": false
-        }
-      },
-      "description": "Update the Privacy Consent of an Account",
-      "title": "Update Account Privacy Consent",
-      "required": [
-        "id",
-        "privacyAccepted"
-      ]
-    },
-    "pbUpdateAccountPrivacyResponse": {
-      "type": "object",
-      "properties": {
-        "account": {
-          "$ref": "#/definitions/pbAccount",
-          "title": "Updated Account"
-        }
-      },
-      "title": "Update Account Privacy Response"
-    },
-    "pbUpdateAccountRequest": {
-      "type": "object",
-      "example": {
-        "id": "1",
+        "account_id": "1",
         "street": "Death Star 2"
       },
       "properties": {
-        "id": {
+        "accountId": {
           "type": "string",
           "format": "uint64"
-        },
-        "email": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
         },
         "firstname": {
           "type": "string"
@@ -1829,21 +2004,55 @@
           "example": "1990-10-05T00:00:00Z"
         }
       },
-      "description": "Update an Account",
-      "title": "Update Account",
+      "description": "Update an AccountInfo",
+      "title": "Update AccountInfo",
       "required": [
         "id"
       ]
     },
-    "pbUpdateAccountResponse": {
+    "pbUpdateAccountInfoResponse": {
       "type": "object",
       "properties": {
-        "account": {
-          "$ref": "#/definitions/pbAccount"
+        "accountInfo": {
+          "$ref": "#/definitions/pbAccountInfo"
         }
       },
       "description": "Returns the updated Account",
       "title": "Updated Account"
+    },
+    "pbUpdateAccountPrivacyRequest": {
+      "type": "object",
+      "example": {
+        "account_id": "1",
+        "privacy_accepted": true
+      },
+      "properties": {
+        "accountId": {
+          "type": "string",
+          "format": "int64",
+          "example": 1
+        },
+        "privacyAccepted": {
+          "type": "boolean",
+          "example": false
+        }
+      },
+      "description": "Update the Privacy Consent of an AccountInfo",
+      "title": "Update Account Info Privacy Consent",
+      "required": [
+        "id",
+        "privacyAccepted"
+      ]
+    },
+    "pbUpdateAccountPrivacyResponse": {
+      "type": "object",
+      "properties": {
+        "accountInfo": {
+          "$ref": "#/definitions/pbAccountInfo",
+          "title": "Updated AccountInfo"
+        }
+      },
+      "title": "Update Account Info Privacy Response"
     },
     "pbUpdatePaymentRequest": {
       "type": "object",
